--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
+<!doctype html>
 <html>
 <head>
+<link rel="stylesheet" href="style.css">
 <title>pages</title>
 </head>
 <body>
+<p>pages</p>
 </body>
 </html>
