--- a/ma-vacc.html
+++ b/ma-vacc.html
@@ -13,14 +13,14 @@ var margin = {top: 20, right: 20, bottom: 70, left: 40},
 
 var parseDate = d3.timeParse("%d-%b").parse;
 
-var x = d3.scaleOrdinal().rangeRoundBands([0, width], .05);
+var x = d3.scaleOrdinal();//.rangeRoundBands([0, width], .05);
 
 var y = d3.scaleLinear().range([height, 0]);
 
 var xAxis = d3.svg.axis()
     .scale(x)
     .orient("bottom")
-    .tickFormat(d3.time.format("%d-%b"));
+    .tickFormat(d3.timeFormat("%d-%b"));
 
 var yAxis = d3.svg.axis()
     .scale(y)
