--- a/ma-vacc.html
+++ b/ma-vacc.html
@@ -17,15 +17,10 @@ var x = d3.scaleOrdinal();//.rangeRoundBands([0, width], .05);
 
 var y = d3.scaleLinear().range([height, 0]);
 
-var xAxis = d3.svg.axis()
-    .scale(x)
-    .orient("bottom")
+var xAxis = d3.axisBottom(x)
     .tickFormat(d3.timeFormat("%d-%b"));
 
-var yAxis = d3.svg.axis()
-    .scale(y)
-    .orient("left")
-    .ticks(10);
+var yAxis = d3.axisLeft(y);
 
 var svg = d3.select("body").append("svg")
     .attr("width", width + margin.left + margin.right)
