--- a/ma-vacc.html
+++ b/ma-vacc.html
@@ -11,7 +11,7 @@ var margin = {top: 20, right: 20, bottom: 70, left: 40},
     width = 600 - margin.left - margin.right,
     height = 300 - margin.top - margin.bottom;
 
-var parseDate = d3.timeParse("%d-%b").parse;
+var parseDate = d3.timeParse("%d-%b");
 
 var x = d3.scaleOrdinal();//.rangeRoundBands([0, width], .05);
 
