--- a/ma-vacc.html
+++ b/ma-vacc.html
@@ -64,7 +64,7 @@ d3.csv("vacc.csv", function(error, data) {
     .enter().append("rect")
       .style("fill", "steelblue")
       .attr("x", function(d) { return x(d.date); })
-      .attr("width", x.rangeBand())
+      .attr("width", 5)//x.rangeBand())
       .attr("y", function(d) { return y(d.value); })
       .attr("height", function(d) { return height - y(d.value); });
 
