--- a/ma-vacc.html
+++ b/ma-vacc.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="styles.css">
-<script src="https://d3js.org/d3.v4.js"></script>
+<script src="https://d3js.org/d3.v3.js"></script>
 <script>
 //rows = {};
 //zz = d3.csv("vacc.csv").get( function(error, data) { console.log(error); rows = data;});
@@ -11,16 +11,21 @@ var margin = {top: 20, right: 20, bottom: 70, left: 40},
     width = 600 - margin.left - margin.right,
     height = 300 - margin.top - margin.bottom;
 
-var parseDate = d3.timeParse("%d-%b");
+var parseDate = d3.time,format("%d-%b").parse;
 
-var x = d3.scaleOrdinal();//.rangeRoundBands([0, width], .05);
+var x = d3.scale.ordinal().rangeRoundBands([0, width], .05);
 
-var y = d3.scaleLinear().range([height, 0]);
+var y = d3.scale.linear().range([height, 0]);
 
-var xAxis = d3.axisBottom(x)
-    .tickFormat(d3.timeFormat("%d-%b"));
+var xAxis = d3.svg.axis()
+    .scale(x)
+    .orient("bottom")
+    .tickFormat(d3.time.format("%d-%b"));
 
-var yAxis = d3.axisLeft(y);
+var yAxis = d3.svg.axis()
+    .scale(y)
+    .orient("left")
+    .ticks(10);
 
 var svg = d3.select("body").append("svg")
     .attr("width", width + margin.left + margin.right)
@@ -29,12 +34,15 @@ var svg = d3.select("body").append("svg")
     .attr("transform", 
           "translate(" + margin.left + "," + margin.top + ")");
 
-d3.csv("vacc.csv", function(error, data) {
+var theData;
 
-    data.forEach(function(d) {
-        d.date = parseDate(d.date);
-        d.value = d["1st"] + d["2nd"] + d["J&J"];
-    });
+d3.csv("vacc.csv", function(error, data) {
+  theData = data;
+
+  data.forEach(function(d) {
+      d.date = parseDate(d.date);
+      d.value = d["1st"] + d["2nd"] + d["J&J"];
+  });
 
   x.domain(data.map(function(d) { return d.date; }));
   y.domain([0, d3.max(data, function(d) { return d.value; })]);
@@ -64,7 +72,7 @@ d3.csv("vacc.csv", function(error, data) {
     .enter().append("rect")
       .style("fill", "steelblue")
       .attr("x", function(d) { return x(d.date); })
-      .attr("width", 5)//x.rangeBand())
+      .attr("width", 5)
       .attr("y", function(d) { return y(d.value); })
       .attr("height", function(d) { return height - y(d.value); });
 
