--- a/ma-vacc.html
+++ b/ma-vacc.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="stylesheet" href="styles.css">
 <meta name="keywords" content="COVID, COVID-19, Massachusetts, vaccination, shots, doses, data, d3">
-<meta name="twitter:card" content="MA COVID-19 Vaccinations">
+<meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@SkefWholey">
 <meta name="twitter:title" content="MA COVID-19 Vaccinations">
 <meta name="twitter:description" content="Simple visualizations of Massachusetts COVID-19 vaccination data.">
