--- a/ma-vacc.html
+++ b/ma-vacc.html
@@ -7,7 +7,7 @@
 <meta name="twitter:site" content="@SkefWholey">
 <meta name="twitter:title" content="MA COVID-19 Vaccinations">
 <meta name="twitter:description" content="Simple visualizations of Massachusetts COVID-19 vaccination data.">
-<meta name="twitter:image" content="preview.png">
+<meta name="twitter:image" content="https://skefpages.github.io/preview.png">
 <title>MA COVID-19 Vaccinations</title>
 </head>
 <body>
