--- a/ma-vacc.html
+++ b/ma-vacc.html
@@ -249,10 +249,14 @@ d3.csv("vacc.csv", function(error, data) {
 
   var dLast = theData[theData.length - 1];
   var totalFv = parseInt(dLast["J&J"]) + parseInt(dLast["2nd"]);
-  var day1 = dLast.date;
-  day1.setDate(day1.getDate() + (4000000 - totalFv) / avg7);
 
-  d3.select("body").append("p").text("At this rate, MA will reach the goal of 4M fully vaccinated people on " + day1.toLocaleDateString() + ".");
+  if (totalFv >= 4000000) {
+    d3.select("body").append("p").text("MA has reached the goal of 4M fully vaccinated people; " + totalFv + " are now fully vaccinated.");
+  } else {
+    var day1 = dLast.date;
+    day1.setDate(day1.getDate() + (4000000 - totalFv) / avg7);
+    d3.select("body").append("p").text("At this rate, MA will reach the goal of 4M fully vaccinated people on " + day1.toLocaleDateString() + ".");
+  }
 
   d3.select("body").append("p").html("<i>Source: <a href=\"https://www.mass.gov/info-details/massachusetts-covid-19-vaccination-data-and-updates#daily-covid-19-vaccine-report-\">Massachusetts COVID-19 vaccination data</a>.</i>");
 });
